# hexa-rtsc

./: .gitignore  .own  .roadmap.hexa_rtsc  AGENTS.tape  CHANGELOG.md  CITATION.cff  IMPORTED_FROM_CANON.md  IMPORTED_FROM_CANON.tape  LIMIT_BREAKTHROUGH.md  README.ai.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  TAPE-AUDIT.md  hexa.toml  install.hexa
cli/: hexa-rtsc.hexa
doc/: 48t_rebco_coil_v0.md  calorimetry_rig_v0.md  synthesis_bench_v0.md
doc/lineage/: origin.md
docs/: numerics_methodology.md
firmware/: Makefile  README.md
firmware/doc/: README.md  (+2 more)
firmware/mcu/: .gitignore  Cargo.toml  calorimetry_drv.rs  chamber_drv.rs  lib.rs  memory.x
memory/: feedback_hexa_runtime_quirks.md
papers/: n6-superconductor-paper.md  n6-ultimate-superconductor-integrated-paper.md
rtsc/: .zenodo.json  room-temp-sc.md  tabletop-fusion-verify.hexa
sc/: superconductor.md
tests/: test_calculators.hexa  test_falsifier.hexa  test_lattice.hexa  test_saturation.hexa  test_selftest.hexa  test_verify.hexa
verify/: calc_bcs.hexa  calc_hc2_48t.hexa  calc_lk99.hexa  calc_mcmillan.hexa  cross_doc_audit.hexa  empirical_abrikosov_sans_arxiv.hexa  empirical_bcs_cooper_arxiv.hexa  empirical_hc2_high_field_arxiv.hexa  empirical_lk99_arxiv.hexa  empirical_mcmillan_arxiv.hexa  empirical_specific_heat_arxiv.hexa  falsifier_check.hexa  lattice_check.hexa  lint_numerics.hexa  numerics_bcs.hexa  numerics_bcs_parity.hexa  numerics_bcs_solver.hexa  numerics_cross_pillar.hexa  numerics_hc2_48t.hexa  numerics_hc2_48t_parity.hexa  numerics_hc2_48t_solver.hexa  numerics_lattice_arithmetic.hexa  numerics_lk99.hexa  numerics_lk99_dft.hexa  numerics_lk99_parity.hexa  numerics_lk99_solver.hexa  numerics_mcmillan.hexa  numerics_mcmillan_parity.hexa  numerics_mcmillan_solver.hexa  numerics_tdgl_vortex.hexa  numerics_whh_full.hexa  run_all.hexa  saturation_check.hexa
(+28 files in other folders)
